// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent router - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Router skill for Azure AI Foundry agent lifecycle. Routes to specialized references for packaging, deploying, invoking, and troubleshooting agents. Provides common project context resolution used by all agent workflows.
USE FOR: Foundry agent, build agent, ship agent, agent lifecycle, agent workflow, create Foundry agent, manage Foundry agent, debug agent, deploy agent, create agent, hosted agent, prompt agent, start container, stop container, agent status, clone agent, delete agent, invoke agent, test agent, send message, run agent, agent conversation, agent chat, containerize agent, Dockerfile, Docker image, ACR, package agent, dockerize, build image, push image, troubleshoot agent, agent logs, agent errors, agent not responding, container logs, diagnose agent, agent telemetry.
DO NOT USE FOR: Azure Functions (use azure-functions), non-agent Foundry features like model catalog or evaluations (use microsoft-foundry).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "azure-functions",
    "build",
    "catalog",
    "chat",
    "cli",
    "clone",
    "common",
    "container",
    "containerize",
    "context",
    "conversation",
    "create",
    "debug",
    "delete",
    "deploy",
    "deploying",
    "diagnose",
    "docker",
    "dockerfile",
    "dockerize",
    "errors",
    "evaluations",
    "features",
    "foundry",
    "functions",
    "hosted",
    "image",
    "invoke",
    "invoking",
    "lifecycle",
    "like",
    "logs",
    "manage",
    "mcp",
    "message",
    "microsoft-foundry",
    "model",
    "non-agent",
    "package",
    "packaging",
    "project",
    "prompt",
    "provides",
    "push",
    "references",
    "resolution",
    "responding",
    "router",
    "routes",
    "send",
    "ship",
    "skill",
    "specialized",
    "start",
    "status",
    "stop",
    "telemetry",
    "test",
    "troubleshoot",
    "troubleshooting",
    "used",
    "workflow",
    "workflows",
  ],
  "name": "foundry-agent",
}
`;

exports[`agent router - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "azure-functions",
  "build",
  "catalog",
  "chat",
  "cli",
  "clone",
  "common",
  "container",
  "containerize",
  "context",
  "conversation",
  "create",
  "debug",
  "delete",
  "deploy",
  "deploying",
  "diagnose",
  "docker",
  "dockerfile",
  "dockerize",
  "errors",
  "evaluations",
  "features",
  "foundry",
  "functions",
  "hosted",
  "image",
  "invoke",
  "invoking",
  "lifecycle",
  "like",
  "logs",
  "manage",
  "mcp",
  "message",
  "microsoft-foundry",
  "model",
  "non-agent",
  "package",
  "packaging",
  "project",
  "prompt",
  "provides",
  "push",
  "references",
  "resolution",
  "responding",
  "router",
  "routes",
  "send",
  "ship",
  "skill",
  "specialized",
  "start",
  "status",
  "stop",
  "telemetry",
  "test",
  "troubleshoot",
  "troubleshooting",
  "used",
  "workflow",
  "workflows",
]
`;
